# ntru-prime-rs

./: Cargo.toml  README.md
.github/workflows/: ntru-prime.yml
src/: constants.rs  lib.rs  utils.rs
